# awsmfunc

./: .flake8  .gitignore  .gitmodules  .pylintrc  .style.yapf  LICENSE  README.md  __init__.py  awsmfunc.py  detect.py  install.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
awsmfunc/: __init__.py  avisynth.py  awsmfunc.py  base.py  detect.py  dovi.py  legacy.py
awsmfunc/types/: dovi.py  misc.py  placebo.py  vapoursynth.py
dependencies/inits/: adjust.py  vsutil.py
src/awsmfunc/: __init__.py  base.py  detect.py  dovi.py  hdr10plus.py  legacy.py
src/awsmfunc/types/: dovi.py  misc.py  placebo.py
