[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "awsmfunc"
description = "awesome VapourSynth functions"
version = "1.3.4"
license = {text = "MIT"}
authors = [
  { name = "OpusGang" },
]
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
  "VapourSynth >= 57",
  "numpy",
  "vs-rekt >= 1.0.0",
  "vsutil >= 0.7.0"
]

[project.urls]
Homepage = "https://github.com/OpusGang/awsmfunc"

[tool.setuptools.package-data]
awsmfunc = ["py.typed"]

[project.optional-dependencies]
dev = ["pylint", "toml", "yapf"]
